--- a/public/css/style.css
+++ b/public/css/style.css
@@ -308,7 +308,7 @@ section.about-us .about-details p {
 /*-- Our Works Section --*/
 section.our-work {
 	padding:100px 0;
-	background:url(../images/work.jpg) no-repeat;
+	background:url(../images/con.jpg) no-repeat;
 	background-attachment: fixed;
     background-position: center;
     background-size:100% 100%;
