--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -35,7 +35,8 @@
             <div id="sidemenu" class="collapse navbar-collapse navbar-ex1-collapse">
                 <ul class="nav navbar-nav side-nav">
                     <li>
-                       <br><img src="/images/des.jpg" class="img-responsive center-block" alt="Cinque Terre" width="100" height="100">Charts
+                       <br><img src="/images/des.jpg" class="img-circle center-block" width="100" height="100"><br>
+                        <p class="username">Charts</p>
                     </li>
                     <li class="active">
                         <a href="index.html"><i class="fa fa-fw fa-dashboard"></i> Dashboard</a>
