--- a/public/css/sb-admin.css
+++ b/public/css/sb-admin.css
@@ -198,7 +198,7 @@ ul.alert-dropdown {
 
 .panel-red > .panel-heading {
     border-color: #d9534f;
-    color: #fff;
+    color: #000;
     background-color: #d9534f;
 }
 
