자유게시판 기능 구현

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,7 +27,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
   <link href="/css/main.css" rel="stylesheet">
 </head>
-<body>
+<body id="mebody">
 <div id="wrapper">
    <nav class="navbar navbar-custom navbar-fixed-top bg-primary" role="navigation">
             <!-- Brand and toggle get grouped for better mobile display -->
@@ -38,7 +38,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#"><img src="/images/png.jpg" /></a>
+                <a class="navbar-brand" href="/home/index"><img src="/images/png.jpg" /></a>
             </div>
             <!-- Top Menu Items -->
             <ul class="nav navbar-right top-nav">
@@ -80,16 +80,16 @@
                         <a href="javascript:;" data-toggle="collapse" data-target="#demo"><i class="fa fa-fw fa-edit"></i> 게시판 <i class="fa fa-fw fa-caret-down"></i></a>
                         <ul id="demo" class="collapse">
                             <li>
-                                <a href="#">공지사항</a>
+                                <a href="/post/list">공지사항</a>
                             </li>
                             <li>
-                                <a href="#">자유게시판</a>
+                                <a href="/post/list">자유게시판</a>
                             </li>
                             <li>
-                                <a href="#">질문과 답변</a>
+                                <a href="/post/list">질문과 답변</a>
                             </li>
                             <li>
-                                <a href="#">갤러리</a>
+                                <a href="/post/list">갤러리</a>
                             </li>
                         </ul>
                     </li>
