--- a/public/css/main.css
+++ b/public/css/main.css
@@ -56,3 +56,20 @@
 #page-wrapper .panel-green {
     color:#77d3c4;
 }
+
+#wrapper {
+    background-color:#FFFFFF;
+}
+
+#mebody {
+    background-color:#FFFFFF;
+}
+
+.tbnum {
+    width: 50px;
+}
+
+.tbtitle {
+    width: 60%;
+}
+
