게시판 유형에 따라 다르게 보이기

--- a/app/views/post/show.html.erb
+++ b/app/views/post/show.html.erb
@@ -17,9 +17,9 @@
             </div>
             <hr />
             <div class="col-lg-5">
-                <a class="btn btn-default" href="/post/list">목록</a>
-                <a class="btn btn-default" href="/post/edit/<%= @post.id %>">수정</a>
-                <a class="btn btn-default" href="/post/delete_complete/<%= @post.id %>">삭제</a>
+                <a class="btn btn-default" href="/bulletin/<%= @bulletin.id %>/posts/list">목록</a>
+                <a class="btn btn-default" href="/bulletin/<%= @bulletin.id %>/posts/edit/<%= @post.id %>">수정</a>
+                <a class="btn btn-default" href="/bulletin/<%= @bulletin.id %>/posts/delete_complete/<%= @post.id %>">삭제</a>
             </div>
         </div>
         
