--- a/app/views/bulletin/edit.html.erb
+++ b/app/views/bulletin/edit.html.erb
@@ -4,25 +4,26 @@
         <div class="row">
             <div class="col-lg-12">
                 <h1 class="page-header">
-                    새 글 작성
+                    게시판 수정
                 </h1>
             </div>
         </div>
         
         <div class="row">
             <div class="col-lg-5">
-                <form action="/bulletin/<%= @bulletin.id %>/posts/create" method="post">
+                <form action="/bulletin/edit_complete" method="post">
+                    <input type="hidden" name="id" value="<%= @b.id %>">
                     <div class="form-inputs">
                         <label>제목</label>
-                        <input type="text" name="title" class="form-control">
+                        <input type="text" name="title" class="form-control" value="<%= @b.title %>">
                     </div>
                     <br>
                     <div class="form-inputs">
-                        <label>내용</label>
-                        <textarea name="content" class="form-control" rows="10"></textarea>
+                        <label>설명</label>
+                        <textarea name="description" class="form-control" rows="10" ><%= @b.description %></textarea>
                     </div>
                     <br>
-                    <button type="submit" class="btn btn-default">작성 완료</button>
+                    <button type="submit" class="btn btn-default">수정 완료</button>
                 </form>
             </div>
         </div>
