--- a/app/views/bulletin/new.html.erb
+++ b/app/views/bulletin/new.html.erb
@@ -4,25 +4,34 @@
         <div class="row">
             <div class="col-lg-12">
                 <h1 class="page-header">
-                    새 글 작성
+                    새 게시판 만들기
                 </h1>
             </div>
         </div>
         
         <div class="row">
             <div class="col-lg-5">
-                <form action="/bulletin/<%= @bulletin.id %>/posts/create" method="post">
+                <form action="/bulletin/create" method="post">
                     <div class="form-inputs">
                         <label>제목</label>
                         <input type="text" name="title" class="form-control">
                     </div>
                     <br>
                     <div class="form-inputs">
-                        <label>내용</label>
-                        <textarea name="content" class="form-control" rows="10"></textarea>
+                        <label>설명</label>
+                        <textarea name="description" class="form-control" rows="10"></textarea>
                     </div>
                     <br>
-                    <button type="submit" class="btn btn-default">작성 완료</button>
+                    <div class="form-inputs">
+                        <label>형태</label>
+                        <select class="form-control" name="posttype">
+                            <% @t.each do |t| %>
+                                <option value=<%= t.id %>><%= t.name %></option>
+                            <% end %>
+                        </select>
+                    </div>
+                    <br>
+                    <button type="submit" class="btn btn-default">생성 완료</button>
                 </form>
             </div>
         </div>
