--- a/app/views/bulletin/show.html.erb
+++ b/app/views/bulletin/show.html.erb
@@ -4,29 +4,40 @@
         <div class="row">
             <div class="col-lg-12">
                 <h1 class="page-header">
-                    새 글 작성
+                    <%= @b.title %>
                 </h1>
             </div>
         </div>
         
         <div class="row">
+            <table class='table table-bordered'>
+            <tr>
+              <th>Title</th>
+              <td><%= @b.title %></td>
+            </tr>
+            <tr>
+              <th>Description</th>
+              <td><%= @b.description %></td>
+            </tr>
+            <tr>
+              <th>Created at</th>
+              <td><%= @b.created_at %></td>
+            </tr>
+            </tr>
+            <tr>
+              <th>Post type</th>
+              <td><%= @b.posttype.name %></td>
+            </tr>
+            </table>
+            <hr />
             <div class="col-lg-5">
-                <form action="/bulletin/<%= @bulletin.id %>/posts/create" method="post">
-                    <div class="form-inputs">
-                        <label>제목</label>
-                        <input type="text" name="title" class="form-control">
-                    </div>
-                    <br>
-                    <div class="form-inputs">
-                        <label>내용</label>
-                        <textarea name="content" class="form-control" rows="10"></textarea>
-                    </div>
-                    <br>
-                    <button type="submit" class="btn btn-default">작성 완료</button>
-                </form>
+                <a class="btn btn-default" href="/bulletin/index">목록</a>
+                <a class="btn btn-default" href="/bulletin/edit/<%= @b.id %>">수정</a>
+                <a class="btn btn-default" href="/bulletin/delete_complete/<%= @b.id %>">삭제</a>
             </div>
         </div>
-            
+        
+        
         <br>
         
         <% if !flash.empty? %>
