--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -80,16 +80,16 @@
                         <a href="javascript:;" data-toggle="collapse" data-target="#demo"><i class="fa fa-fw fa-edit"></i> 게시판 <i class="fa fa-fw fa-caret-down"></i></a>
                         <ul id="demo" class="collapse">
                             <li>
-                                <a href="/post/list">공지사항</a>
+                                <a href="/bulletin/1/posts/list">공지사항</a>
                             </li>
                             <li>
-                                <a href="/post/list">자유게시판</a>
+                                <a href="/bulletin/2/posts/list">자유게시판</a>
                             </li>
                             <li>
-                                <a href="/post/list">질문과 답변</a>
+                                <a href="/bulletin/3/posts/list">질문과 답변</a>
                             </li>
                             <li>
-                                <a href="/post/list">갤러리</a>
+                                <a href="/bulletin/4/posts/list">갤러리</a>
                             </li>
                         </ul>
                     </li>
