--- a/app/views/post/edit.html.erb
+++ b/app/views/post/edit.html.erb
@@ -11,7 +11,7 @@
         
         <div class="row">
             <div class="col-lg-5">
-                <form action="/post/edit_complete" method="post">
+                <form action="/bulletin/<%= @bulletin.id %>/posts/edit_complete" method="post">
                     <input type="hidden" name="id" value="<%= @post.id %>">
                     <div class="form-inputs">
                         <label>제목</label>
