--- a/app/views/post/post_types/_blog.html.erb
+++ b/app/views/post/post_types/_blog.html.erb
@@ -1,1 +1,56 @@
-ㅂ블블록블로긋블로그십블로그시발
+<div id="page-wrapper">
+    <div class="container-fluid">
+        <!-- Page Heading -->
+        <div class="row">
+            <div class="col-lg-12">
+                <h1 class="page-header">
+                    <%= bulletin_name params[:bulletin_id] %> <small><a class="btn btn-default" href="/bulletin/<%= @bulletin.id %>/posts/new">새 글</a>
+                </h1>
+                
+            </div>
+        </div>
+    
+        <div class="row">
+            <div class="col-lg-6">
+               
+                <div class="post">
+               
+                        
+                        <% @p.each do |p| %>
+                        
+                                <div class="title">
+                                    <%= p.title %>
+                                </div>
+                                <div class="content">
+                                    <%= p.content %>
+                                </div>
+                                <a href="">Otto</a>
+                                <%= p.created_at %>
+                                <hr>    
+                        <% end %>
+                </div>
+            
+            </div>
+        </div>
+        
+        <br>
+        
+        <% if !flash.empty? %>
+                    <div class="row"> 
+                <div class="col-lg-5">
+                    <div class="alert alert-danger" role="alert"><%= flash[:alert] %></div>
+                </div>
+            </div> 
+        <% else %>
+              
+        <% end %>
+    </div>
+</div>
+
+
+    <!-- jQuery -->
+<script src="/js/jquery.js"></script>
+<!-- Morris Charts JavaScript -->
+<script src="/js/plugins/morris/raphael.min.js"></script>
+<script src="/js/plugins/morris/morris.min.js"></script>
+<script src="/js/plugins/morris/morris-data.js"></script>
