--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -4,7 +4,7 @@
         <div class="row">
             <div class="col-lg-12">
                 <h1 class="page-header">
-                    반려동물 돌보미 플랫폼 <small>by PC</small>
+                    <font face="나눔바른고딕">반려동물 돌보미 플랫폼 <small>by PC</small></font>
                 </h1>
                 <div class="jumbotron">
                  
