--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,22 +1,22 @@
 .navbar-custom {
     color: #000000;
-    background-color: #33A2FF;
+    background-color: #4eb3d3;
 }
 
 .navbar-custom .navbar-header {
-    color: #000000;
+    color: #ffffff;
 }
 
-.navbar-custom ul .dropdown-toggle, .glyphicon {
-    color: #FFFFFF;
+.navbar-custom ul>li .dropdown-toggle, .glyphicon, .fa-user-md{
+    color: #ffffff;
 }
 
 #text a {
      color: #FFFFFF;
 }
 
-.navbar-custom ul > li > a:hover, .navbar-custom ul > li > a:focus, .navbar-custom #sidemenu > ul > li > a:hover, .navbar-custom #sidemenu > ul > li > a:focus {
-   background:rgba(0,0,0, 0.18); text-shadow:none;
+.navbar-custom ul > li > a:hover,.navbar-custom ul > li > a:focus,.navbar-custom #sidemenu > ul > li > a:focus, .navbar-custom #sidemenu > ul > li > a:focus {
+   background:rgba(0 ,0, 0, 0.18); text-shadow:none;
 
 }
 
@@ -49,7 +49,7 @@
 .jumbotron {
     height: 400px;
     background-color:#77d3c4;
-    background-image: url(/images/bestdog.jpg);
+    background-image: url(/images/real5.jpg);
      background-repeat: no-repeat;
 }
 
