고양이 DB 긁어오기

--- a/app/views/post/post_types/_blog.html.erb
+++ b/app/views/post/post_types/_blog.html.erb
@@ -13,11 +13,10 @@
         <div class="row">
             <div class="col-lg-6">
                
-                <div class="post">
                
-                        
+               <!-- 질문과 답변 Lay out -->
+                <div class="post">
                         <% @p.each do |p| %>
-                        
                                 <div class="title">
                                     <%= p.title %>
                                 </div>
