--- a/app/views/post/post_types/_gallery.html.erb
+++ b/app/views/post/post_types/_gallery.html.erb
@@ -10,7 +10,8 @@
             </div>
         </div>
     
-        <div class="row">
+        <!-- 갤러리 레이아웃 -->
+        <div class="row">v
             <% @p.each do |p| %>
                 <div class="title">
                     <%= p.title %>
